docs/0.6/_sources/api/gammapy.data.DataStoreObservation.rst.txt


DataStoreObservation
=================================

.. currentmodule:: gammapy.data

.. autoclass:: DataStoreObservation
   :show-inheritance:

   
     
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~DataStoreObservation.aeff
      ~DataStoreObservation.bkg
      ~DataStoreObservation.edisp
      ~DataStoreObservation.events
      ~DataStoreObservation.gti
      ~DataStoreObservation.muoneff
      ~DataStoreObservation.observation_dead_time_fraction
      ~DataStoreObservation.observation_live_time_duration
      ~DataStoreObservation.observation_time_duration
      ~DataStoreObservation.observatory_earth_location
      ~DataStoreObservation.pointing_altaz
      ~DataStoreObservation.pointing_radec
      ~DataStoreObservation.pointing_zen
      ~DataStoreObservation.psf
      ~DataStoreObservation.target_radec
      ~DataStoreObservation.tstart
      ~DataStoreObservation.tstop

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~DataStoreObservation.load
      ~DataStoreObservation.location
      ~DataStoreObservation.make_exposure_image
      ~DataStoreObservation.make_psf
      ~DataStoreObservation.peek

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: aeff
   .. autoattribute:: bkg
   .. autoattribute:: edisp
   .. autoattribute:: events
   .. autoattribute:: gti
   .. autoattribute:: muoneff
   .. autoattribute:: observation_dead_time_fraction
   .. autoattribute:: observation_live_time_duration
   .. autoattribute:: observation_time_duration
   .. autoattribute:: observatory_earth_location
   .. autoattribute:: pointing_altaz
   .. autoattribute:: pointing_radec
   .. autoattribute:: pointing_zen
   .. autoattribute:: psf
   .. autoattribute:: target_radec
   .. autoattribute:: tstart
   .. autoattribute:: tstop

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: load
   .. automethod:: location
   .. automethod:: make_exposure_image
   .. automethod:: make_psf
   .. automethod:: peek

   
   