docs/0.11/_sources/api/gammapy.data.DataStoreObservation.rst.txt
DataStoreObservation
====================

.. currentmodule:: gammapy.data

.. autoclass:: DataStoreObservation
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~DataStoreObservation.aeff
      ~DataStoreObservation.bkg
      ~DataStoreObservation.edisp
      ~DataStoreObservation.events
      ~DataStoreObservation.fixed_pointing_info
      ~DataStoreObservation.gti
      ~DataStoreObservation.muoneff
      ~DataStoreObservation.obs_info
      ~DataStoreObservation.observation_dead_time_fraction
      ~DataStoreObservation.observation_live_time_duration
      ~DataStoreObservation.observation_time_duration
      ~DataStoreObservation.observatory_earth_location
      ~DataStoreObservation.pointing_altaz
      ~DataStoreObservation.pointing_radec
      ~DataStoreObservation.pointing_zen
      ~DataStoreObservation.psf
      ~DataStoreObservation.target_radec
      ~DataStoreObservation.tstart
      ~DataStoreObservation.tstop

   .. rubric:: Methods Summary

   .. autosummary::

      ~DataStoreObservation.check
      ~DataStoreObservation.load
      ~DataStoreObservation.location
      ~DataStoreObservation.peek
      ~DataStoreObservation.select_time

   .. rubric:: Attributes Documentation

   .. autoattribute:: aeff
   .. autoattribute:: bkg
   .. autoattribute:: edisp
   .. autoattribute:: events
   .. autoattribute:: fixed_pointing_info
   .. autoattribute:: gti
   .. autoattribute:: muoneff
   .. autoattribute:: obs_info
   .. autoattribute:: observation_dead_time_fraction
   .. autoattribute:: observation_live_time_duration
   .. autoattribute:: observation_time_duration
   .. autoattribute:: observatory_earth_location
   .. autoattribute:: pointing_altaz
   .. autoattribute:: pointing_radec
   .. autoattribute:: pointing_zen
   .. autoattribute:: psf
   .. autoattribute:: target_radec
   .. autoattribute:: tstart
   .. autoattribute:: tstop

   .. rubric:: Methods Documentation

   .. automethod:: check
   .. automethod:: load
   .. automethod:: location
   .. automethod:: peek
   .. automethod:: select_time
